fixed map color content and color block not align issues

--- a/sass/map.scss
+++ b/sass/map.scss
@@ -80,6 +80,7 @@
         height: 12px;
         position: absolute;
         right: -20px;
+        margin-top: 4px;
       }
 
       &:nth-child(1)::after {
